--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Example workflow for Maven using the Snyk application
+name: Example workflow for Maven using Snyk
 on: push
 jobs:
   security:
